--- a/package.json
+++ b/package.json
@@ -6,20 +6,79 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write ."
   },
   "dependencies": {
+    "@casl/ability": "^6.5.0",
+    "@casl/react": "^3.1.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.8",
+    "@hookform/resolvers": "^3.3.2",
+    "@iconify/react": "^4.1.1",
+    "@mui/material": "^5.15.15",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.7",
+    "@mui/x-data-grid": "^6.18.7",
+    "@reduxjs/toolkit": "^2.1.1",
+    "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-query-devtools": "^5.81.5",
+    "axios": "^1.6.2",
+    "axios-mock-adapter": "^1.22.0",
+    "chart.js": "^4.4.2",
+    "crypto-js": "^4.2.0",
+    "draft-js": "0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "emoji-picker-react": "^4.12.3",
+    "firebase": "^11.10.0",
+    "html-to-draftjs": "^1.5.0",
+    "i18next": "^23.8.0",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.2",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "next": "15.3.5",
+    "next-auth": "^4.24.11",
+    "next-sitemap": "^4.2.3",
+    "nprogress": "^0.2.0",
+    "prettier": "^3.1.1",
     "react": "^19.0.0",
+    "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.24.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.5"
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.49.2",
+    "react-hot-toast": "^2.4.1",
+    "react-i18next": "^13.5.0",
+    "react-multi-carousel": "^2.8.6",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-redux": "^9.1.2",
+    "sass": "^1.73.0",
+    "socket.io-client": "^4.8.1",
+    "styled-components": "^6.1.1",
+    "sweetalert2": "^11.22.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@types/crypto-js": "^4.2.2",
+    "@types/draftjs-to-html": "^0.8.4",
+    "@types/html-to-draftjs": "^1.4.3",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/nprogress": "^0.2.3",
+    "@types/react-datepicker": "^4.19.5",
+    "@types/react-draft-wysiwyg": "1.13.4",
+    "@types/node": "^20.11.0",
+    "@types/react": "^19.0.25",
+    "@types/react-dom": "^19.0.14",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "eslint": "^9.0.0",
     "eslint-config-next": "15.3.5",
-    "@eslint/eslintrc": "^3"
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "prettier": "^3.1.1",
+    "typescript": "^5.4.0"
   }
 }
