--- a/package.json
+++ b/package.json
@@ -33,13 +33,15 @@
     "emoji-picker-react": "^4.12.3",
     "firebase": "^11.10.0",
     "html-to-draftjs": "^1.5.0",
-    "i18next": "^23.8.0",
+    "i18next": "^23.16.8",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
+    "i18next-resources-to-backend": "^1.2.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
+    "next-i18n-router": "^5.5.2",
     "next-sitemap": "^4.2.3",
     "nprogress": "^0.2.0",
     "prettier": "^3.1.1",
@@ -67,12 +69,12 @@
     "@types/draftjs-to-html": "^0.8.4",
     "@types/html-to-draftjs": "^1.4.3",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/nprogress": "^0.2.3",
-    "@types/react-datepicker": "^4.19.5",
-    "@types/react-draft-wysiwyg": "1.13.4",
     "@types/node": "^20.11.0",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^19.0.25",
+    "@types/react-datepicker": "^4.19.5",
     "@types/react-dom": "^19.0.14",
+    "@types/react-draft-wysiwyg": "1.13.4",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "eslint": "^9.0.0",
     "eslint-config-next": "15.3.5",
