--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,14 +20,8 @@
     ],
     "paths": {
       "src/*": ["./src/*"]
-    }
+    },
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    "src/types"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/types", "types"],
   "exclude": ["node_modules"]
 }
