--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@casl/ability": "^6.5.0",
@@ -72,9 +74,14 @@
     "@storybook/addon-docs": "^9.0.16",
     "@storybook/addon-onboarding": "^9.0.16",
     "@storybook/addon-vitest": "^9.0.16",
+    "@storybook/nextjs-vite": "^9.0.16",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/crypto-js": "^4.2.2",
     "@types/draftjs-to-html": "^0.8.4",
     "@types/html-to-draftjs": "^1.4.3",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.0",
     "@types/nprogress": "^0.2.3",
@@ -83,18 +90,21 @@
     "@types/react-dom": "^19.0.14",
     "@types/react-draft-wysiwyg": "1.13.4",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.0.0",
     "eslint-config-next": "15.3.5",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-storybook": "^9.0.16",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
+    "playwright": "^1.53.2",
     "prettier": "^3.1.1",
     "storybook": "^9.0.16",
+    "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.0",
-    "@storybook/nextjs-vite": "^9.0.16",
-    "vitest": "^3.2.4",
-    "@vitest/browser": "^3.2.4",
-    "playwright": "^1.53.2",
-    "@vitest/coverage-v8": "^3.2.4"
+    "vitest": "^3.2.4"
   }
 }
