--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
     "i18next-resources-to-backend": "^1.2.1",
+    "identity-obj-proxy": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "next": "15.3.5",
